--- a/GLFWStarterProject/GLFWStarterProject.vcxproj
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj
@@ -30,8 +30,12 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="Geode.h" />
+    <ClInclude Include="Group.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="MatrixTransform.h" />
     <ClInclude Include="ModelLoader.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="OBJObject.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="ShaderProgram.h" />
@@ -39,13 +43,18 @@
     <ClInclude Include="WaterFrameBuffer.h" />
     <ClInclude Include="WaterShader.h" />
     <ClInclude Include="WaterTile.h" />
+    <ClInclude Include="WeddingCake.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="Geode.cpp" />
+    <ClCompile Include="Group.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MatrixTransform.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="OBJObject.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
@@ -53,6 +62,7 @@
     <ClCompile Include="WaterFrameBuffer.cpp" />
     <ClCompile Include="WaterShader.cpp" />
     <ClCompile Include="WaterTile.cpp" />
+    <ClCompile Include="WeddingCake.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
